--- a/home/s98259/.config/i3/config
+++ b/home/s98259/.config/i3/config
@@ -26,7 +26,7 @@ exec xset -dpms
 exec xset s 0 0
 exec xset s off
 exec xset led on 
-exec xkbcomp ~/Kaffe-Dvorak $DISPLAY > /dev/null 2>&1
+# exec xkbcomp ~/Kaffe-Dvorak $DISPLAY > /dev/null 2>&1
 exec xkbset a
 exec xkbset m ma 60 10 10 5 2
 exec xkbset =m
@@ -37,7 +37,7 @@ exec xautolock -locker "tmux select-window -t 2 && $error '$lockmsg' & $lock && 
 
 # Custom keybindings
 bindsym $mod+z exec $error '$lockmsg'; exec $lock
-bindsym $mod+b exec ~/bin/mousekeys
+bindsym $mod+b exec ~/bin/mousekeys -t
 bindsym $mod+c exec $scrn
 bindsym $mod+Shift+e exec pkill X
 bindsym $mod+Return exec $term
