Abandoned several xset and xkbset features for xorg.conf

--- a/etc/X11/xorg.conf
+++ b/etc/X11/xorg.conf
@@ -2,6 +2,10 @@ Section "ServerLayout"
     Identifier     "Layout0"
     Screen      0  "Screen0"
     InputDevice    "Keyboard0" "CoreKeyboard"
+    Option          "BlankTime"     "0"
+    Option          "StandbyTime"   "0"
+    Option          "SuspendTime"   "0"
+    Option          "OffTime"       "0"
 EndSection
 
 Section "Files"
@@ -27,7 +31,7 @@ Section "Monitor"
     ModelName      "Unknown"
     HorizSync       28.0 - 33.0
     VertRefresh     43.0 - 72.0
-    Option         "DPMS"
+    Option         "DPMS"	"FALSE"
     Option	   "UseEdidDpi"	"FALSE"
     Option	   "DPI"	"96 x 96"
 EndSection
